Minor CSS fixes for overflowing content, especially in collections

--- a/components/base.scss
+++ b/components/base.scss
@@ -196,7 +196,6 @@
 }
 .vue-component .tabular .value {
 	flex: 3;
-	overflow: auto;
 }
 .vue-component .tabular .value > ul,
 .vue-component .tabular .value > .formatted > ul,
